@@ -20,7 +20,6 @@
 package com.puppycrawl.tools.checkstyle.checks;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
@@ -91,6 +90,13 @@ public class SuppressWarningsHolder
      * Compiled pattern used to match preceding newline in text block content.
      */
     private static final Pattern NEWLINE = Pattern.compile("\\n");
+
+    /**
+     * Creates a new {@code SuppressWarningsHolder} instance.
+     */
+    public SuppressWarningsHolder() {
+        // no code by default
+    }
 
     /**
      * Returns the default alias for the source name of a check, which is the
@@ -346,7 +352,7 @@ public class SuppressWarningsHolder
      */
     private static List<String> getAllAnnotationValues(DetailAST ast) {
         // get values of annotation
-        List<String> values = Collections.emptyList();
+        List<String> values = List.of();
         final DetailAST lparenAST = ast.findFirstToken(TokenTypes.LPAREN);
         if (lparenAST != null) {
             final DetailAST nextAST = lparenAST.getNextSibling();
@@ -398,7 +404,7 @@ public class SuppressWarningsHolder
      */
     private static DetailAST getNthChild(DetailAST ast, int index) {
         DetailAST child = ast.getFirstChild();
-        for (int i = 0; i < index && child != null; ++i) {
+        for (int i = 0; i < index && child != null; i++) {
             child = child.getNextSibling();
         }
         return child;
@@ -465,7 +471,7 @@ public class SuppressWarningsHolder
      */
     private static List<String> getAnnotationValues(DetailAST ast) {
         return switch (ast.getType()) {
-            case TokenTypes.EXPR -> Collections.singletonList(getStringExpr(ast));
+            case TokenTypes.EXPR -> List.of(getStringExpr(ast));
             case TokenTypes.ANNOTATION_ARRAY_INIT -> findAllExpressionsInChildren(ast);
             default -> throw new IllegalArgumentException(
                     "Expression or annotation array initializer AST expected: " + ast);
