@@ -20,7 +20,6 @@
 package com.puppycrawl.tools.checkstyle.checks.coding;
 
 import java.util.ArrayDeque;
-import java.util.Collections;
 import java.util.Deque;
 import java.util.HashSet;
 import java.util.Set;
@@ -62,6 +61,13 @@ public final class ParameterAssignmentCheck extends AbstractCheck {
     /** Current set of parameters. */
     private Set<String> parameterNames;
 
+    /**
+     * Creates a new {@code ParameterAssignmentCheck} instance.
+     */
+    public ParameterAssignmentCheck() {
+        // no code by default
+    }
+
     @Override
     public int[] getDefaultTokens() {
         return getRequiredTokens();
@@ -101,7 +107,7 @@ public final class ParameterAssignmentCheck extends AbstractCheck {
     public void beginTree(DetailAST rootAST) {
         // clear data
         parameterNamesStack.clear();
-        parameterNames = Collections.emptySet();
+        parameterNames = Set.of();
     }
 
     @Override
